# ME_759

./: .gitignore  README.md
Assignment_1/src/: CMakeLists.txt  p2.c  p3.c  p4.cpp
Assignment_10/src/: CMakeLists.txt  p1.c
Assignment_11/scripts/: p1.slurm  p3_1_1.slurm  p3_1_2.slurm  p3_1_4.slurm  p3_1_8.slurm  p3_2_1.slurm  p3_2_2.slurm  p3_2_4.slurm  p3_2_8.slurm  submit_all_p3.bash
Assignment_11/src/: CMakeLists.txt  p1.c  p3.c
Assignment_2/src/: CMakeLists.txt  p2.c  p3.cpp  p4.cpp
Assignment_3/scripts/: p1_submit.slurm  p2_submit.slurm  run_p2.sh  submit_p1.slurm  submit_p2.slurm
Assignment_3/src/: CMakeLists.txt  ex.cu  p1.cu  p2.cu
Assignment_4/scripts/: .gitignore  p2_ref.m  p2_test_submit.slurm  p3_submit.slurm
Assignment_4/src/: CMakeLists.txt  matrixadd.cu  matrixadd.h  matrixadd_gold.cpp  matrixadd_kernel.cu  p1.cu  p2.cu
Assignment_5/scripts/: p1.slurm  p1_submit.slurm  p1_submit_all.slurm  p1_test_submit.slurm  p2_6.slurm  p2_submit.slurm  p2_submit_0.slurm  p2_submit_1.slurm  p2_submit_2.slurm  p2_submit_4.slurm  p2_submit_6.slurm
Assignment_5/src/: CMakeLists.txt  matrixmul.cu  matrixmul.h  matrixmul_gold.cpp  matrixmul_kernel.cuh  tiledMatMult.h  vector_reduction.cu  vector_reduction_gold.cpp  vector_reduction_kernel.cu
Assignment_6/scripts/: p1.slurm  p2.slurm
Assignment_6/src/: 2Dconvolution.cu  2Dconvolution.h  2Dconvolution_gold.cpp  CMakeLists.txt  stencil_1d.cu  testV4.cu
Assignment_7/scripts/: p1.slurm  p2.slurm
Assignment_7/src/: p1.cu  p2.cu
Assignment_8/src/: CMakeLists.txt  p1.cu
Assignment_9/scripts/: p1.slurm  (+2 more)
(+10 files in other folders)
